trying to fix placeholder images on mobile

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ a:hover{
 @media screen and (max-width: 992px) {
     .thumbnail {
         width: 50px;
+        height: 50px;
     }
 
   
